# Terminal-Menu

./: CMakeLists.txt  build.sh
example/: CMakeLists.txt  main.c
header/: bash_menu.h
include/: terminal_menu.h
src/: ansi_esc_code.c  ansi_esc_code.h  main.c
